src/objects/Apttus__Agreement_Clause__c.object
<CustomObject>
    <description>Represents a clause associated with an agreement</description>
    <fields>
        <fullName>Apttus__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inserted</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>R00N50000001os4tEAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__AlternateClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause used to replace the the Standard Clause</description>
        <inlineHelpText>ID of the clause used to replace the the Standard Clause</inlineHelpText>
        <label>Alternate Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>AgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acceptance</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Care</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Customer Commitment</fullName>
                </value>
                <value>
                    <fullName>Customer Data Security</fullName>
                </value>
                <value>
                    <fullName>Customer Remote Access</fullName>
                </value>
                <value>
                    <fullName>Customer Restrictions</fullName>
                </value>
                <value>
                    <fullName>Customer Security Management</fullName>
                </value>
                <value>
                    <fullName>Data Privacy</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
                <value>
                    <fullName>Escrow</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management</fullName>
                </value>
                <value>
                    <fullName>Incident Response and Handling</fullName>
                </value>
                <value>
                    <fullName>Information Security Control</fullName>
                </value>
                <value>
                    <fullName>Interception</fullName>
                </value>
                <value>
                    <fullName>IPR</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Manage Services</fullName>
                </value>
                <value>
                    <fullName>Network Security</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Penalties</fullName>
                </value>
                <value>
                    <fullName>Physical Security</fullName>
                </value>
                <value>
                    <fullName>Privacy</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Product Security</fullName>
                </value>
                <value>
                    <fullName>Risk and Title</fullName>
                </value>
                <value>
                    <fullName>Sales Mode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Clause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Comments2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus__Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments (Deprecated)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <description>ID of the associated content</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the associated content</inlineHelpText>
        <label>Content</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DiffText2__c</fullName>
        <description>The clause diff text</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The clause diff text</inlineHelpText>
        <label>Diff Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Apttus__DiffText__c</fullName>
        <description>The clause diff text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Diff Text (Deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <label>Exception</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Materially_Significant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Materially Significant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__PrevText__c</fullName>
        <description>The clause previous text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Previous Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__PreviousVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Previous version of agreement clause</description>
        <inlineHelpText>Previous version of agreement clause</inlineHelpText>
        <label>Previous Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Previous Version Agreement Clauses</relationshipLabel>
        <relationshipName>PreviousAgreementClauseVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__PrimordialVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the first version of agreement clause</description>
        <inlineHelpText>Lookup to the first version of agreement clause</inlineHelpText>
        <label>Primordial Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Agreement Clauses (Primordial Agreement Clause)</relationshipLabel>
        <relationshipName>PrimordialAgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G4 Approved</fullName>
                </value>
                <value>
                    <fullName>G5 Approved</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <description>The clause subcategory</description>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Screening</fullName>
                </value>
                <value>
                    <fullName>Access Control System</fullName>
                </value>
                <value>
                    <fullName>Addressable market</fullName>
                </value>
                <value>
                    <fullName>Asset Identification and Classification</fullName>
                </value>
                <value>
                    <fullName>Assurance</fullName>
                </value>
                <value>
                    <fullName>Audit and Logging</fullName>
                </value>
                <value>
                    <fullName>Audit and Reporting</fullName>
                </value>
                <value>
                    <fullName>Baseline Requirements</fullName>
                </value>
                <value>
                    <fullName>Cloud usage</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consequential &amp; Indirect Damages</fullName>
                </value>
                <value>
                    <fullName>Containment, Evidence, and Recovery</fullName>
                </value>
                <value>
                    <fullName>Contract Renewal</fullName>
                </value>
                <value>
                    <fullName>Credential Management​</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Customer Documentation</fullName>
                </value>
                <value>
                    <fullName>Customer Scans and Penetration Tests</fullName>
                </value>
                <value>
                    <fullName>Datacenters and Computing Facilities</fullName>
                </value>
                <value>
                    <fullName>Data Localization and Onward Transfers</fullName>
                </value>
                <value>
                    <fullName>Data Loss Prevention</fullName>
                </value>
                <value>
                    <fullName>Data Mapping and Inventory</fullName>
                </value>
                <value>
                    <fullName>Data Privacy</fullName>
                </value>
                <value>
                    <fullName>Data Protection</fullName>
                </value>
                <value>
                    <fullName>Data Security</fullName>
                </value>
                <value>
                    <fullName>Data Subject Rights</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Direct Damages</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery and Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Domain/Industry/Region Specific Regulations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipName>R00N50000001os4wEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Text__c</fullName>
        <description>The clause text</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001os53EAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates Associated Document Version ID</description>
        <inlineHelpText>Indicates Associated Document Version ID</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>AgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_AdditionalCriteriaforContractSummary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Criteria for Contract Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Agreement_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Approval_Condition_G4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Condition G4</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Compliance__c</fullName>
        <label>Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Not compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Customer_Request_RFQ__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Summarize the Customer Request for this Clause</inlineHelpText>
        <label>Customer Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Flag_for_review__c</fullName>
        <label>Flag for Review</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>BG SME Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Has_Obligations__c</fullName>
        <label>Has Obligations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Help__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Highlights__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Highlights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Inserted_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inserted Lookup</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>InsertedClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_L2D_Approval_Level_G4__c</fullName>
        <label>L2D Approval Level G4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CLM_WtD_Approval_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_L2D_Decision_G4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L2D Decision G4</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_L2D_RelevantSignedClause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L2D Relevant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_L2D_Relevant__c</fullName>
        <label>L2D Relevant?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_L2D_Trigger_Answer__c</fullName>
        <description>CM seeks Approval at this level at G4</description>
        <encryptionScheme>None</encryptionScheme>
        <label>G4 Approval Ask (Answer)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_L2D_Trigger__c</fullName>
        <formula>TEXT(CLM_Question__r.CLM_L2DTrigger__c)</formula>
        <label>L2D Trigger?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the L2D Approval Level (A+ to E) or R if the Clause corresponds to a Non-L2D Trigger</inlineHelpText>
        <label>CCM Identified Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_LoA_Level__c</fullName>
        <label>LoA Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Mitigation_actions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mitigation actions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Modified_Clauses_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified Clauses Lookup</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Modified Clauses</relationshipLabel>
        <relationshipName>Modified_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Nokia_Default_Position__c</fullName>
        <formula>CLM_Question__r.CLM_Nokia_Default_Position__c</formula>
        <label>Nokia Default Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Nokia_NET_Response_Walk_away__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Walkaway Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Non_L2D_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-L2D Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Position_to_Avoid__c</fullName>
        <formula>CLM_Question__r.CLM_Position_to_Avoid__c</formula>
        <label>Position to Avoid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Pre_Negotiated_Clause_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Clause Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select an L2D Trigger or Choose Non-L2D Issue if there isn&apos;t a corresponding L2D Trigger for the Clause in the contract</inlineHelpText>
        <label>L2D Trigger (question)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CLM_L2D_Trigger__c.CLM_L2DTrigger__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CLM_L2D_Trigger__c</referenceTo>
        <relationshipLabel>Agreement Clauses</relationshipLabel>
        <relationshipName>Agreement_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Risks_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risks Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Risks_Mitigated__c</fullName>
        <inlineHelpText>If at final contract signature (G6) risks are mitigated then select Yes</inlineHelpText>
        <label>Risks Mitigated?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Muted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Risky_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Risky Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLM_Scope__c</fullName>
        <label>Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Infosec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Select_an_Answer__c</fullName>
        <formula>IF (ISPICKVAL(CLM_Question__r.CLM_L2DTrigger__c, &quot;No&quot;), HYPERLINK(&quot;/apex/CLM_L2DTriggerPage?L2DType=NonL2d&amp;id=&quot;&amp;Id&amp;&quot;&amp;TrgId=&quot;&amp;CLM_Question__c&amp;&quot;&amp;AgrmntId=&quot;&amp;Apttus__Agreement__c, IMAGE(&quot;/resource/CLM_L2D_Answers&quot;, &quot;L2D Answers&quot;), &quot;_self&quot;), IF (ISPICKVAL(CLM_Question__r.CLM_L2DTrigger__c, &quot;Yes&quot;), HYPERLINK(&quot;/apex/CLM_L2DTriggerPage?L2DType=L2d&amp;id=&quot;&amp;Id&amp;&quot;&amp;TrgId=&quot;&amp;CLM_Question__c&amp;&quot;&amp;AgrmntId=&quot;&amp;Apttus__Agreement__c, IMAGE(&quot;/resource/CLM_L2D_Answers&quot;, &quot;L2D Answers&quot;), &quot;_self&quot;) ,null))</formula>
        <inlineHelpText>View a list of Answers associated with the L2D Trigger or Enter an Answer if this is a Non-L2D Trigger</inlineHelpText>
        <label>Possible Answers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Signed_Clause__c</fullName>
        <label>Signed Clause?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLM_Signed_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signed Lookup</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Signed Agreement Clauses</relationshipLabel>
        <relationshipName>SignedAgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLM_Signed_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signed Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLM_Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L2D</fullName>
                </value>
                <value>
                    <fullName>Non-L2D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DE_Similarity_Score__c</fullName>
        <description>Similarity Score</description>
        <inlineHelpText>Similarity Score</inlineHelpText>
        <label>Similarity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_at_G5__c</fullName>
        <description>The final offer to customer at G5 (Ready for Signatures)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Position at G5(delta versus G4 decision)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Situation_vs_L2D__c</fullName>
        <label>Signed Situation vs L2D G5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Not approved</fullName>
                </value>
                <value>
                    <fullName>Mitigated/Muted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Clause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Agreement__c</columns>
        <columns>Apttus__Clause__c</columns>
        <columns>Apttus__Action__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>CLM_Inserted_Lookup__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>